[package]
edition = "2021"
name = "timer-no-std"
version = "0.2.1"
rust-version = "1.59"
authors = ["warlock <internalmike@gmail.com>"]
description = "Cross-platform interface to a monotonic clock and the corresponding thread sleep method."
readme = "README.md"
documentation = "https://docs.rs/timer-no-std/"
keywords = ["monotonic", "timer", "fps", "delay", "sleep"]
categories = ["os", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/timer-no-std"

[dependencies]
num-traits = { version = "0.2.15", default-features = false }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.126", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["synchapi", "sysinfoapi"] }

[badges]
maintenance = { status = "experimental" }
