[package]
edition = "2021"
name = "timer-no-std"
version = "0.5.1"
rust-version = "1.71"
authors = ["warlock <internalmike@gmail.com>"]
description = "Cross-platform interface to a monotonic clock and the corresponding thread sleep method."
readme = "README.md"
documentation = "https://docs.rs/timer-no-std/"
keywords = ["monotonic", "timer", "fps", "delay", "sleep"]
categories = ["os", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/timer-no-std"

[dependencies]
num-traits = { version = "0.2.15", default-features = false }

[target.'cfg(all(not(target_os="dos"), not(windows)))'.dependencies]
libc = { version = "0.2.126", default-features = false }

[target.'cfg(all(not(target_os="dos"), windows))'.dependencies]
winapi = { version = "0.3.9", features = ["synchapi", "sysinfoapi"] }

[target.'cfg(target_os="dos")'.dependencies]
pc-timer = "0.1.6"

[badges]
maintenance = { status = "experimental" }
