[package]
edition = "2021"
name = "countdwn"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
dos-cp = "0.7.0"
exit-no-std = "0.2.0"
panic-no-std = "0.1.0"
panicking = { version = "0.5.0", default-features = false, features = ["abort"] }
pc-atomics = "0.0.2"
rlibc-ext = "0.1.0"
timer-no-std = { path = "../.." }

[build-dependencies]
dos-cp-generator = "0.7.0"
